# lab-gatr

./: CONTRIBUTING.md  LICENSE  README.md  README.nm  data.py  datasets.py  main.py  pyproject.toml  setup.py  transforms.py  utils.py  wandb_impostor.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: README.md  epsilon_velocity.pt  epsilon_wss.pt  mae_pma_run_0.pt  mae_pma_run_1.pt  mae_pma_run_2.pt
debug-dataset/raw/: download_link
lab_gatr/: __init__.py  data.py  models.py  transforms.py
lab_gatr/models/: __init__.py  lab_gatr.py  lab_vatr.py
lab_gatr/nn/: attn_mask.py  blocks.py  class_token.py  gnn.py  positional_encoding.py
lab_gatr/nn/blocks/cross_attention/: geometric_algebra.py  vanilla.py
lab_gatr/nn/mlp/: geometric_algebra.py  vanilla.py
models/: __init__.py  lab_gatr.py
nn/: gnn.py
tutorials/: GRaM_lab_gatr.ipynb  basic_usage.ipynb  detailed_model_reference.ipynb
