[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    {name = "Julian Suk"},
    {name = "Baris Imre"},
    {name = "Julian Suk", email = "julian.suk@gmail.com"},
    {name = "Baris Imre", email = "barisimre98@gmail.com"}
]
dependencies = [
    "torch",
    "xformers",
    "torch_geometric",
    "torch_scatter",
    "torch_cluster",
    "gatr"
]
description = "Geometric algbera transformers for large biomedical surface and volume meshes"
license = {text = "MIT License"}
name = "lab_gatr"
version = "0.6.0"

[project.urls]
homepage = "https://github.com/sukjulian/lab-gatr"

[tool.setuptools.packages]
find = {}
